--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zsy.androidtranstest" >
+
     <!-- 联网权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,10 +10,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".MyApplication">
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainFragementActivity"
+            android:label="@string/title_activity_main_fragement" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +23,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name=".UpdateActivity"
             android:label="@string/title_activity_update_activity" >
+        </activity>
+        <activity
+            android:name=".ImageResultActivity"
+            android:label="@string/title_activity_image_result" >
         </activity>
     </application>
 
